--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header -->
-    <header id="hero">
+    <!-- <header id="hero"> -->
         <div>
             <h1>Fractal</h1>
             <p>Just a simple, single page responsive<br>brought to you by HTML5 UP</p>
