--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <a href="#"><button>Download</button></a>
             <a href="#"><button>Learn more</button></a>
         </div>
-            <img src="./assets/images/smartphone.jpg" alt="image smartphone" id="hero_img">
+        <img src="./assets/images/smartphone.jpg" alt="image smartphone" id="hero_img">
     </header>
     <!-- contenu de la page -->
     <main>
-        <header id="main">
+        <header id="header_main">
             <h2>Sed ipsum magna lorem tempus amet<br>vehicula et gravida elementum</h2>
-            <div class="trait1"> </div>
+            <hr>
             <ul id="icone">
                 <li>
-                    <img src="./assets/images/phptp.jpg" alt="">
+                    <img src="./assets/images/phptp.jpg" alt="" id="icone_img">
                 </li>
                 <li>
-                    <img src="./assets/images/boucle.jpg" alt="">
+                    <img src="./assets/images/boucle.jpg" alt="" id="icone_img">
                 </li>
-                <li id="nuage">
-                    <img src="./assets/images/nuage.jpg" alt="">
+                <li>
+                    <img src="./assets/images/nuage.jpg" alt="" id="icone_img">
                 </li>
             </ul>
         </header>
@@ -49,60 +49,44 @@
             </div>
             <img class="flou2" src="./assets/images/flou2.jpg" alt="">
         </section>
-        <section id="section3">
+        <section class="section3">
             <img class="flou1" src="./assets/images/flou3.jpg" alt="">
             <div>
                 <h3>Aliquam sed magna</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, ab, accusantium voluptatum deleniti eligendi ex</p>
             </div>
         </section>
-        <section id="section4">
+        <section class="section3">
             <ul class="iconebas">
                 <li>
                     <img src="./assets/images/phptp.jpg" alt="">
-                </li>
-                <li>                
                     <p>Ipsum Lorem ipsum</p>
                 </li>
                 <li>
                     <img src="./assets/images/boucle.jpg" alt="">
-                </li>
-                <li>
                     <p>Ipsum Lorem ipsum</p>
                 </li>
                 <li>
                     <img src="./assets/images/nuage.jpg" alt="">
-                </li>
-                <li>
                     <p>Ipsum Lorem ipsum</p>
                 </li>
-            </ul>
-        </section>           
-        <section id="section5">
-            <ul class="iconebas">    
                 <li>
                     <img src="./assets/images/icone.png" alt="">
-                </li>
-                <li>
-
-                    
                     <p>Ipsum Lorem ipsum</p>
                 </li>
                 <li>
                     <img src="./assets/images/desktop.png" alt="">
-                </li>
-                <li>
                     <p>Ipsum Lorem ipsum</p>
                 </li>
             </ul>
-        </section>
-        <section id="section6">
+        </section>           
+        <section id="section4">
             <div>
                 <h2>Magna leo sapien gravida</h2>
                 <p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula
                     lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
-                <div class="trait1"> </div>
-                <button>Download</button>
+                <hr>
+                <button id="button_download">Download</button>
                 <button>Learn more</button>
             </div>
         </section>
