commit après validate css/html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div>
             <h1>Fractal</h1>
             <p>Just a simple, single page responsive<br>brought to you by HTML5 UP</p>
-            <a href="#"><button>Download</button></a>
-            <a href="#"><button>Learn more</button></a>
+            <button>Download</button>
+            <button>Learn more</button>
         </div>
         <img src="./assets/images/smartphone.jpg" alt="image smartphone" id="hero_img">
     </header>
@@ -25,13 +25,13 @@
             <hr>
             <ul id="icone">
                 <li>
-                    <img src="./assets/images/phptp.jpg" alt="" id="icone_img">
+                    <img src="./assets/images/phptp.jpg" alt="" class="icone_img">
                 </li>
                 <li>
-                    <img src="./assets/images/boucle.jpg" alt="" id="icone_img">
+                    <img src="./assets/images/boucle.jpg" alt="" class="icone_img">
                 </li>
                 <li>
-                    <img src="./assets/images/nuage.jpg" alt="" id="icone_img">
+                    <img src="./assets/images/nuage.jpg" alt="" class="icone_img">
                 </li>
             </ul>
         </header>
